# Trabalho-Pratico-PAA

./: .gitignore  CMakeLists.txt  README.md  config.py  config.template.py  experiment_config.py  readME.md  results.txt  run_analysis.py  run_enhanced_analysis.py
include/knapsack/: backtracking.h  branch_and_bound.h  dynamic_programming.h
include/utils/: instance_generator.h
python/: experiments.py  path_converter.py  test_instances.py
scripts/: enhanced_visualizations.py  fix_environment.sh  generate_visualizations.py  run_experiments_linux.sh  run_experiments_mac.sh
src/algorithms/: backtracking.cpp  branch_and_bound.cpp  dynamic_programming.cpp
src/main/: generate_instances.cpp  run_backtracking.cpp  run_branch_and_bound.cpp  run_dynamic_programming.cpp
src/utils/: instance_generator.cpp
